--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "liveServer.settings.multiRootWorkspaceName": "my-main-env"
+    "liveServer.settings.multiRootWorkspaceName": "Gerador-de-CPF"
 }
